Integra repositório ao controller e adiciona migração inicial
- Controller de usuários agora usa injeção de dependência e métodos assíncronos conectados ao banco de dados.
- Corrige configuração da string de conexão e registro do repositório no Program.cs.
- Torna público o construtor do contexto de banco de dados.
- Atualiza string de conexão para LocalDB no appsettings.json.
- Adiciona migração inicial do EF Core com tabelas de usuários e tarefas.

--- a/SistemaDeTarefas/appsettings.json
+++ b/SistemaDeTarefas/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataBase": "Server=./;Database=DB_SistemaTarefas;User Id=sa;Password=123456"
+    "DataBase": "Server=(localdb)\\mssqllocaldb;Database=DB_SistemaTarefas;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
